--- a/css/book-appoint.css
+++ b/css/book-appoint.css
@@ -38,7 +38,6 @@ body {
   padding: 0 20px;
 }
 
-
 /* Top Bar Styles */
 .topbar {
   background: var(--secondary);
@@ -124,7 +123,6 @@ body {
   display: flex;
   align-items: center;
   text-decoration: none;
- 
 }
 
 .logo h1 {
@@ -142,10 +140,9 @@ body {
   height: 100px;
   width: auto;
   vertical-align: middle;
-  
+
   /* filter: brightness(0) invert(1); */
   margin: 0 5px;
- 
 }
 
 .logo-text {
@@ -220,7 +217,7 @@ body {
   background: linear-gradient(
       135deg,
       rgba(7, 177, 208, 0.85) 0%,
-    rgba(7, 177, 208, 0.7) 100%
+      rgba(7, 177, 208, 0.7) 100%
     ),
     url("/images/IMG-20251102-WA0021_edit_10053728273986.jpg");
   background-size: cover;
@@ -753,7 +750,6 @@ textarea.form-control {
   margin-bottom: 10px;
 }
 
-
 .footer-col h3 {
   font-size: 1.3rem;
   margin-bottom: 25px;
@@ -888,6 +884,10 @@ textarea.form-control {
 
   .main-nav.active ul {
     display: flex;
+  }
+
+  .main-nav a.active {
+    color: var(--text);
   }
 
   .main-nav li {
