--- a/css/cardiology.css
+++ b/css/cardiology.css
@@ -207,7 +207,6 @@ body {
   color: var(--text);
 }
 
-
 /* Scroll to Top Button */
 .scroll-to-top {
   position: fixed;
@@ -242,7 +241,6 @@ body {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
 }
 
-
 /* Cardiology Hero Section */
 .cardiology-hero {
   background: var(--secondary);
@@ -260,8 +258,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/images/heart.jpeg")
-    center/cover no-repeat;
+  background: url("/images/heart.jpeg") center/cover no-repeat;
   opacity: 0.2;
   z-index: 1;
   background-attachment: fixed;
@@ -805,6 +802,10 @@ body {
     display: flex;
   }
 
+  .main-nav a.active {
+    color: var(--text);
+  }
+
   .main-nav li {
     margin: 10px 0;
   }
@@ -820,7 +821,6 @@ body {
     justify-content: center;
   }
 }
-
 
 /* Responsive Styles */
 @media (max-width: 1024px) {
