--- a/css/doctors.css
+++ b/css/doctors.css
@@ -121,7 +121,6 @@ body {
   display: flex;
   align-items: center;
   text-decoration: none;
- 
 }
 
 .logo h1 {
@@ -139,10 +138,9 @@ body {
   height: 100px;
   width: auto;
   vertical-align: middle;
-  
+
   /* filter: brightness(0) invert(1); */
   margin: 0 5px;
- 
 }
 
 .logo-text {
@@ -258,7 +256,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
- background: linear-gradient(
+  background: linear-gradient(
     135deg,
     rgba(7, 177, 208, 0.85) 0%,
     rgba(7, 177, 208, 0.7) 100%
@@ -763,15 +761,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-   background: linear-gradient(
+  background: linear-gradient(
       135deg,
       rgba(7, 177, 208, 0.9) 0%,
       rgba(7, 177, 208, 0.8) 100%
     ),
     url("/images/undefined (1).jpeg");
-    background-attachment: fixed;
+  background-attachment: fixed;
   align-items: center;
- 
 }
 
 .cta-section h2 {
@@ -821,7 +818,6 @@ body {
   gap: 40px;
   margin-bottom: 10px;
 }
-
 
 .footer-col h3 {
   font-size: 1.3rem;
@@ -960,6 +956,10 @@ body {
 
   .main-nav.active ul {
     display: flex;
+  }
+
+  .main-nav a.active {
+    color: var(--text);
   }
 
   .main-nav li {
