--- a/css/test-result.css
+++ b/css/test-result.css
@@ -36,7 +36,6 @@ body {
   padding: 0 20px;
 }
 
-
 /* Top Bar Styles */
 .topbar {
   background: var(--secondary);
@@ -227,8 +226,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/images/test-result.jpg")
-    center/cover no-repeat;
+  background: url("/images/test-result.jpg") center/cover no-repeat;
   opacity: 0.1;
   z-index: 1;
   background-attachment: fixed;
@@ -749,6 +747,10 @@ body {
 
   .main-nav.active ul {
     display: flex;
+  }
+
+  .main-nav a.active {
+    color: var(--text);
   }
 
   .main-nav li {
