--- a/css/cardiology.css
+++ b/css/cardiology.css
@@ -802,6 +802,10 @@ body {
     display: flex;
   }
 
+  .main-nav a:hover {
+    color: var(--white);
+  }
+
   .main-nav a.active {
     color: var(--text);
   }
