--- a/css/index.css
+++ b/css/index.css
@@ -1160,6 +1160,10 @@ body {
   .main-nav a.active {
     color: var(--text);
   }
+  
+.main-nav a:hover {
+  color: var(--white);
+}
 
   .main-nav li {
     margin: 10px 0;
