--- a/css/about.css
+++ b/css/about.css
@@ -933,6 +933,10 @@ body {
     display: flex;
   }
 
+  .main-nav a:hover {
+    color: var(--white);
+  }
+
   .main-nav a.active {
     color: var(--text);
   }
